# 8051Emulator

./: .cproject  .project  8051 Simulation.exe.stackdump  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  clean.sh  cmake_install.cmake  gdb.exe.stackdump  main.cpp  tests.sh  valgrind.sh
Debug/: makefile
Debug/src/: Assembler.d  BytesArray.d  Processor.d  subdir.mk
Debug/test/: AllTest.d  AssemblerTests.d  ProcessorTests.d  bytesArrayTests.d  subdir.mk
src/: Assembler.cpp  Assembler.h  BytesArray.cpp  BytesArray.h  CMakeLists.txt  CTestTestfile.cmake  Makefile  Processor.cpp  Processor.h  main.cpp
test/: AssemblerTests.cpp  CMakeLists.txt  CTestTestfile.cmake  Makefile  bytesArrayTests.cpp  cmake_install.cmake
test/testCases/: ProcessorTests.cpp
